--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "install": "^0.12.1",
+    "mongoose": "^5.3.1",
+    "mongoose-hidden": "^1.6.0",
+    "mongoose-unique-validator": "^2.0.2"
   }
 }
