--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "install": "^0.12.1",
     "mongoose": "^5.3.1",
     "mongoose-hidden": "^1.6.0",
-    "mongoose-unique-validator": "^2.0.2"
+    "mongoose-unique-validator": "^2.0.2",
+    "underscore": "^1.9.1"
   }
 }
